--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,68 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+:root {
+  /* Colors */
+  --orange: #f87719;
+  --black: #111111;
+  --light-black: #282828;
+  --gray: #595959;
+  --light-gray: #b7b7b7;
+  --white: #ffffff;
+  --transparent-white: #f8f8f8;
+}
+/* $linear-gradient-up: linear-gradient(141.22deg, #ffc226 9.4%, #f84119 91.91%);
+$linear-gradient-down: linear-gradient(
+  141.22deg,
+  #f84119 9.4%,
+  rgba(248, 159, 25, 0.68) 91.91%
+); */
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+  font-family: inherit;
+}
+
+input {
+  font-family: inherit;
 }
