--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-/* body {
+body {
   margin: 0;
+  background-color: #111111;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,7 +11,7 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} */
+}
 
 :root {
   /* Colors */
